--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
       "@items/*": ["./src/contexts/items/*"],
       "@users/*": ["./src/contexts/users/*"],
       "@auth/*": ["./src/contexts/auth/*"],
-      "@shared/*": ["./src/contexts/shared/*"]
+      "@shared/*": ["./src/contexts/shared/*"],
+      "@shippings/*": ["./src/contexts/shippings/*"]
     },
 
     "incremental": true,
