--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -16,6 +16,12 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+      - name: Check Secrets # Paso de depuración
+        run: |
+          echo "Checking if secrets are set..."
+          echo "DOCKERHUB_USERNAME is set: ${{ secrets.DOCKERHUB_USERNAME != '' }}"
+          echo "DOCKERHUB_TOKEN is set: ${{ secrets.DOCKERHUB_TOKEN != '' }}"
+          echo "Username prefix: ${{ secrets.DOCKERHUB_USERNAME }}" | head -c 10
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
