feat: Update .env.example with database, JWT, server, CORS and log configurations.

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,22 @@
-DATABASE_URL= "postgresql://user:pass@host/db"
-JWT_SECRET="jwt-secret"
+# Configuración de la base de datos
+DATABASE_URL="postgresql://user:pass@host:5432/db?schema=public"
+
+# Configuración de JWT
+JWT_ACCESS_SECRET="your_jwt_access_secret_key_here"
+JWT_REFRESH_SECRET="your_jwt_refresh_secret_key_here"
+JWT_ACCESS_EXPIRATION="15m"
+JWT_REFRESH_EXPIRATION="7d"
+
+# Configuración del servidor
+PORT=4001
+NODE_ENV="development"
+
+# Configuración de CORS
+CORS_ORIGIN="http://localhost:3000"
+
+# Configuración de logs
+LOG_LEVEL="debug"
+
+# Configuración de seguridad
+RATE_LIMIT=100
+RATE_LIMIT_WINDOW_MS=900000  # 15 minutos
