Feat: Include lib http files in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -62,5 +62,8 @@ pids
 *.seed
 *.pid.lock
 
+# lib http
+*.http
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
