feat: Refactor - Update tsconfig: Move shared context to src/shared

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
       "@items/*": ["./src/contexts/items/*"],
       "@users/*": ["./src/contexts/users/*"],
       "@auth/*": ["./src/contexts/auth/*"],
-      "@shared/*": ["./src/contexts/shared/*"],
+      "@shared/*": ["./src/shared/*"],
       "@shippings/*": ["./src/contexts/shippings/*"]
     },
 
