--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "crypto": "^1.0.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
     "morgan": "^1.10.0",
     "passport": "^0.7.0",
@@ -61,6 +62,7 @@
     "@swc/core": "^1.10.7",
     "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/date-fns": "^2.5.3",
     "@types/jest": "^29.5.14",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.10.7",
