feat[core]: update dependencies and database schema.

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,14 @@ LOG_LEVEL="debug"
 # Configuración de seguridad
 RATE_LIMIT=100
 RATE_LIMIT_WINDOW_MS=900000  # 15 minutos
+
+# Configuración de SMTP para envío de correos
+HOST_EMAIL="smtp.gmail.com"
+PORT_EMAIL="587"
+SMTP_SECURE="false"
+SMTP_USER="your_email@gmail.com"
+SMTP_PASSWORD="your_app_password"
+SMTP_FROM="your_email@gmail.com"
+
+# Configuración de URL del frontend
+FRONTEND_URL="http://localhost:3000"
