--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nestjs/platform-fastify": "^11.1.0",
     "@nestjs/swagger": "^11.1.5",
     "@prisma/client": "^6.15.0",
+    "@types/nodemailer": "^7.0.1",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "axios": "^1.9.0",
@@ -46,6 +47,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^7.0.6",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
